[gd_scene load_steps=11 format=3 uid="uid://dhkyb6t56c2fk"]

[ext_resource type="Script" uid="uid://dw4yaadsasl86" path="res://UI/Buttons/KeyBtn/key_btn.gd" id="1_5n3hm"]
[ext_resource type="FontFile" uid="uid://dlia1t71max12" path="res://Fonts/PixelOperator.ttf" id="4_f1p3b"]
[ext_resource type="PackedScene" uid="uid://c7n7pxhkwpt0k" path="res://UI/SvgIcon/SVGIcon.tscn" id="6_nf7q3"]
[ext_resource type="FontFile" uid="uid://cf1pm48y6jlcm" path="res://Fonts/RasterForgeRegular-JpBgm.ttf" id="6_nkjw7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nf7q3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_753p1"]
bg_color = Color(1, 0.74902, 0.2, 1)

[sub_resource type="LabelSettings" id="LabelSettings_p1ehi"]
font = ExtResource("6_nkjw7")
font_size = 32
font_color = Color(0, 0, 0, 1)
outline_color = Color(0, 0, 0, 0.615686)
shadow_size = 0
shadow_offset = Vector2(2, 2)

[sub_resource type="LabelSettings" id="LabelSettings_nkjw7"]
font = ExtResource("6_nkjw7")
font_color = Color(0, 0, 0, 1)
outline_color = Color(0, 0, 0, 0.615686)
shadow_size = 0
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1a54a"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_yubgd"]
font = ExtResource("4_f1p3b")
font_color = Color(1, 0.74902, 0.2, 1)
shadow_color = Color(1, 0.746667, 0.2, 0.305882)

[node name="KeyBtn" type="PanelContainer"]
modulate = Color(1, 1, 1, 0.5)
offset_right = 54.0
offset_bottom = 32.0
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxEmpty_nf7q3")
script = ExtResource("1_5n3hm")
title = "TITLE"
is_disabled = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_753p1")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="KeyLabel" type="Label" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 5
text = "E"
label_settings = SubResource("LabelSettings_p1ehi")
visible_characters = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 2

[node name="SmallKeyLabel" type="Label" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 5
text = "NTER"
label_settings = SubResource("LabelSettings_nkjw7")
vertical_alignment = 2
visible_characters = 10
visible_ratio = 2.5

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1a54a")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer2/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="SVGIcon" parent="VBoxContainer/PanelContainer2/MarginContainer/HBoxContainer" instance=ExtResource("6_nf7q3")]
layout_mode = 2
icon = 15
icon_color = Color(1, 0.74902, 0.2, 1)

[node name="TitleHeader" type="Label" parent="VBoxContainer/PanelContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "TITLE"
label_settings = SubResource("LabelSettings_yubgd")
